# PowerPack

./: .gitignore  Makefile  README  ppacknotes.txt
.config/: clientconfig.txt
examples/: configs.inils  nimeasure.cpp  nimeasure.h
examples/Cont Acq-Int Clk/: ContAcq-IntClk  ContAcq-IntClk.c  Makefile  VC_ContAcq_IntClk.dsp  VC_ContAcq_IntClk.dsw  VC_ContAcq_IntClk.vcproj
examples/Cont Acq-Int Clk/chandlerSocketsCode/: fileLib.c
functionAPIs/: fcontrol.c  helloworldAttempt.c  meter.c  netmeter.h
metertools/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  libtool
metertools/CVS/: Entries  Repository
metertools/autom4te.cache/: output.0  requests  traces.0
metertools/docs/: Makefile  Makefile.am  Makefile.in  manual.dvi  mclient.1
metertools/docs/chapters/: compiling.tex  planning.tex
metertools/docs/meters/wattsup/CVS/: Repository
metertools/m4/: Makefile  Makefile.am  Makefile.in  netlibs.m4
metertools/m4/CVS/: Entries
metertools/src/: Makefile  Makefile.am  Makefile.in
metertools/src/CVS/: Entries  Repository  Root
metertools/src/mapi/: Makefile  Makefile.am  Makefile.in  fluke_189.h  netmeter.c.bak  netmeter.h  protek_506.c  protek_506.lo  rs_22812.lo  serial_watts_up.c  usb_wattsup.c  usb_wattsup.c.bak
metertools/src/mapi/.deps/: fluke_189.Plo  meter.Plo  netmeter.Plo  protek_506.Plo  rs_22812.Plo  watts_up.Plo
metertools/src/mapi/.libs/: libmeter.la  libmeter.lai  libmeter.so.1  libmeter.so.1.0.0
metertools/src/support/: .cvsignore  Makefile  passivesock.lo  stringbuffer.c  util.lo
metertools/src/support/.deps/: connectsock.Plo  passivesock.Plo  stringbuffer.Plo  util.Plo
metertools/src/support/.libs/: libsupport.so.1.0.0
metertools/src/tools/: .cvsignore  Makefile  Makefile.am  Makefile.in  PS3_SPU2  PS3_SPU4  PS3_SPU6  mclient.c  mlogger.c  mlogger.c~  msend  msend.c
metertools/src/tools/.deps/: mclient.Po  mlogger.Po
metertools/src/tools/.libs/: lt-mclient  mclient  mlogger  msend
metertools/src/tools/CVS/: Entries  Repository
metertools/src/tools/mcontrol/: Makefile  fta4r1  mcontrol  mserver  multiserver.c  multiserver_13  sensor_server  shoc-mic.pwr  start_meter_powerpack3.0.sh
metertools/src/tools/mcontrol/CVS/: Repository
niserver/: README
niserver/Debug/: niserver.ilk
niserver/niserver/: ContAcq-IntClk.c  ReadMe.txt  connectsock.c  nidaqmx_server.c  nidaqmx_server.h  niserver.vcxproj  utils.c
niserver/niserver/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
old/functionAPIs/: README  fcontrol.h  helloWorldAttempt  meter.lo  netmeter.c  netmeter.h.bak
old/metertools/: aclocal.m4  autogen.sh  config.status  configure.ac  cvs.cmd
old/metertools/autom4te.cache/: output.0  requests  traces.0
old/metertools/docs/: .cvsignore  manual.tex  mlogger.1  msend.1
old/metertools/docs/CVS/: Entries  Repository
old/metertools/docs/chapters/: mapi.tex
old/metertools/docs/chapters/CVS/: Entries  Repository
old/metertools/docs/meters/CVS/: Entries  Repository
old/metertools/docs/meters/rs22812/CVS/: Entries  Repository
old/metertools/docs/meters/wattsup/CVS/: Entries
old/metertools/m4/CVS/: Repository
old/metertools/src/: Makefile
old/metertools/src/mapi/: .cvsignore  Makefile  fluke_189.c  fluke_189.lo  libmeter.la  meter.h  netmeter.lo  protek_506.h  rs_22812.c  rs_22812.h  watts_up.h  watts_up.lo
old/metertools/src/mapi/.deps/: fluke_189.Plo  meter.Plo  rs_22812.Plo
old/metertools/src/mapi/.libs/: libmeter.la
old/metertools/src/mapi/CVS/: Entries  Repository
old/metertools/src/support/: Makefile.am  Makefile.in  connectsock.c  connectsock.h  connectsock.lo  libsupport.la  passivesock.c  passivesock.h  stringbuffer.h  stringbuffer.lo  util.c  util.h
old/metertools/src/support/.deps/: connectsock.Plo  passivesock.Plo  stringbuffer.Plo
old/metertools/src/support/.libs/: libsupport.lai  libsupport.so.1
old/metertools/src/support/CVS/: Entries  Repository
old/metertools/src/tools/: Makefile.am~  PS3_SPU1  example.c  mclient  mlogger
old/metertools/src/tools/.deps/: mclient.Po  msend.Po
old/metertools/src/tools/mcontrol/: mcontrol  mcontrol.c  mcontrol.c~  mserver  mserver.c  mserver.c.bak  mserver.c~  multiserver.c.tmp  multiserver_13  multiserver_13 reverse engineered with new default port 6950  r.pwr  sensor_server  sensor_server.c  wattsupUSB_mserver
old/niserver/: niserver.sln
old/niserver/niserver/: NIDAQmx.h  netmeter.c  netmeter.h  niserver.vcxproj.filters
old/niserver/niserver/Debug/: link.command.1.tlog  mt.command.1.tlog  mt.read.1.tlog  niserver.lastbuildstate  niserver_manifest.rc
src/: %1  .gitignore  Makefile  client  clientexample  clientexample.cpp  configData.ini  eventhandler.cpp  eventhandler.h  functionapi.cpp  functionapi.h  helloworld  helloworld.c  helloworld.cpp  nidaqmxeventhandler.cpp  nidaqmxeventhandler.h  nimeasure  server  serverexample  serverexample.cpp  socketutils.cpp  socketutils.h  testSockets.cpp  testfunctionapi.cpp  testsockets.cpp  testsockets.cpp.changebacklater  timeutils.cpp  timeutils.h  tsocks
src/chandlerSocketsCode/: fileLib.c  parallelClient.c  parallelServer.c
testo_westo/: base.h  derived.cpp  derived.h  test  test.cpp
